HOTFIX: reduce print font size, avoid page breaks in sections

--- a/app/styles/layouts/_l-print.scss
+++ b/app/styles/layouts/_l-print.scss
@@ -6,6 +6,19 @@
 
 @media print {
 
+  html {
+    font-size: 8pt;
+  }
+
+  .map {
+    width: 100% !important;
+  }
+
+  .page-section {
+    position: relative !important;
+    page-break-inside: avoid !important;
+  }
+
   a[href]:after {
     word-wrap: break-word !important;
   }
